--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/lang.css": "/css/lang.css"
+    "/css/app.css": "/css/app.css",
+    "/css/custom-admin.css": "/css/custom-admin.css"
 }
