Remove Vue component and add static code to front end

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/css/custom-admin.css": "/css/custom-admin.css"
+    "/css/front.css": "/css/front.css"
 }
